# asteria-classmates

./: .gitignore  AGENTS.md  CLAUDE.md  IDEAS.md  README.md  Requirements.md  Simple_Tasks.md  Tasks.md  colab_eval_tl.ipynb  colab_finetune_15spk.ipynb  pyproject.toml  run_eval.sh  run_eval_tl.sh  run_eval_tl_30spk.sh
.agents/skills/bosesph-pipeline/: SKILL.md
apps/agent/: agent.py  prompts.py  pyproject.toml
apps/web/: package.json  pnpm-lock.yaml  vitest.config.ts
apps/web/__tests__/: api.test.ts  comparison-chart.test.tsx  dashboard-grid.test.tsx  demo-form.test.tsx  demo-page.test.tsx  demo-result.test.tsx  demo-stepper.test.tsx  nav.test.tsx  status-card.test.tsx
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: comparison-chart.tsx  dashboard-grid.tsx  demo-form.tsx  demo-page.tsx  demo-result.tsx  demo-stepper.tsx  mermaid.tsx  nav.tsx  sidebar.tsx  status-card.tsx
apps/web/lib/: api.ts
docs/: MCP_AGENTS.md  dataset_format.md  metadata.schema.json  phase5_plan.md  phase7_implementation_plan.md  phase8_implementation_handoff.md  transcription_guidelines.md
docs/superpowers/: PROGRESS.md
docs/superpowers/plans/: 2026-06-25-phase-0-3-repository-foundation.md  2026-06-25-phase-2-pld-audio-ingestion.md  2026-06-25-phase-3-transcription-validation.md  2026-06-25-phase-8-dashboard-demo.md  2026-06-26-export-eval-colab.md  2026-06-26-finetune-defaults.md  2026-06-26-phase-8-hackathon-mvp.md  2026-06-26-phase8-dashboard-demo.md  2026-06-26-static-pipeline-showcase.md
sample_data/: README.md  metadata_template.csv  provenance_manifest.example.json
scripts/: create_mock_dataset.py  prepare_10speakers.py  prepare_15speakers.py  prepare_30speakers.py  prepare_5speakers.py
slides/: index.html  slide_1.html  slide_10.html  slide_11.html  slide_12.html  slide_2.html  slide_3.html  slide_4.html  slide_5.html  slide_6.html  slide_7.html  slide_8.html  slide_9.html
src/bosesph/: __init__.py  asr.py  audio.py  benchmark.py  cli.py  colab.py  dataset.py  finetune.py  ingestion.py  metadata.py  pld.py  review.py  transcripts.py
src/bosesph_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: audio_fixtures.py  test_api.py  test_audio.py  test_benchmark.py  test_cli.py  test_colab.py  test_colab_eval.py  test_dataset.py  test_finetune.py  test_ingestion.py  test_jobs.py  test_mcp.py  test_metadata.py  test_pld.py  test_review.py  test_transcripts.py
(+29 files in other folders)
