[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bosesph-toolkit"
version = "0.1.0"
description = "CLI-first tools for building Philippine-language speech datasets."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
asr = [
  "transformers>=4.40,<5",
  "torch>=2.2",
  "numpy>=1.24",
  "jiwer>=3.0,<4",
]
dev = [
  "black>=24.4,<26",
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
bosesph = "bosesph.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
target-version = ["py310"]
line-length = 88
